--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,17 @@
 {
     "name": ":vendor_slug/:package_slug",
     "description": ":package_description",
-    "keywords": [
-        ":vendor_name",
-        "laravel",
-        ":package_slug"
-    ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
     "license": "MIT",
+    "type": "returfs-marketplace",
     "authors": [
         {
             "name": ":author_name",
-            "email": "author@domain.com",
-            "role": "Developer"
+            "email": "author@domain.com"
         }
     ],
     "require": {
         "php": "^8.2",
-        "spatie/laravel-package-tools": "^1.16",
-        "illuminate/contracts": "^10.0||^11.0"
+        "returfs/shared-external": "*"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
@@ -26,7 +19,6 @@
         "larastan/larastan": "^2.9",
         "orchestra/testbench": "^9.0.0||^8.22.0",
         "pestphp/pest": "^2.34",
-        "pestphp/pest-plugin-arch": "^2.7",
         "pestphp/pest-plugin-laravel": "^2.3",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan-deprecation-rules": "^1.1",
@@ -47,6 +39,10 @@
     },
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "canvas ide-helper:models --dir=\"src/Models\""
+        ],
         "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
         "prepare": "@php vendor/bin/testbench package:discover --ansi",
         "build": [
@@ -64,6 +60,8 @@
         "format": "vendor/bin/pint"
     },
     "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
@@ -74,10 +72,7 @@
         "laravel": {
             "providers": [
                 "VendorName\\Skeleton\\SkeletonServiceProvider"
-            ],
-            "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
-            }
+            ]
         }
     },
     "minimum-stability": "dev",
