feat: wip: Extension Builder: writing

--- a/composer.json
+++ b/composer.json
@@ -1,80 +1,94 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
-    "version": "1.0.0",
-    "license": "MIT",
-    "type": "returfs-marketplace",
-    "authors": [
-        {
-            "name": ":author_name",
-            "email": "author@domain.com"
-        }
+  "name": "<%= vendorSlug %>/<%= packageSlug %>",
+  "description": "<%= description %>",
+  "version": "1.0.0",
+  "license": "MIT",
+  "type": "returfs-marketplace",
+  "authors": [
+    {
+      "name": "<%= authorName %>",
+      "email": "<%= authorEmail %>"
+    }
+  ],
+  "require": {
+    "php": "^8.2",
+    "returfs/shared-internal-laravel": "^1.0",
+    "returfs/shared-external-laravel": "^1.0"
+  },
+  "require-dev": {
+    "nunomaduro/collision": "^8.1",
+    "barryvdh/laravel-ide-helper": "^3.0",
+    "laravel/pint": "^1.14",
+    "orchestra/canvas": "^9.0",
+    "orchestra/testbench": "^9.0",
+    "pestphp/pest": "^2.7",
+    "pestphp/pest-plugin-faker": "^2.0",
+    "pestphp/pest-plugin-laravel": "^2.0",
+    "nunomaduro/larastan": "^3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "<%= vendorNamespace %>\\<%= className %>\\": "src/",
+      "<%= vendorNamespace %>\\<%= className %>\\Database\\Factories\\": "database/factories/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "<%= vendorNamespace %>\\<%= className %>\\Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "@clear",
+      "@prepare",
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@generate-ide-helper-model"
     ],
-    "require": {
-        "php": "^8.2",
-        "returfs/shared-external": "*"
-    },
-    "require-dev": {
-        "laravel/pint": "^1.14",
-        "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "larastan/larastan": "^2.9",
-        "orchestra/testbench": "^9.0.0||^8.22.0",
-        "pestphp/pest": "^2.34",
-        "pestphp/pest-plugin-laravel": "^2.3",
-        "phpstan/extension-installer": "^1.3",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
-        "phpstan/phpstan-phpunit": "^1.3",
-        "spatie/laravel-ray": "^1.35"
-    },
-    "autoload": {
-        "psr-4": {
-            "VendorName\\Skeleton\\": "src/",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": "@composer run prepare",
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "canvas ide-helper:models --dir=\"src/Models\""
-        ],
-        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
-        "prepare": "@php vendor/bin/testbench package:discover --ansi",
-        "build": [
-            "@composer run prepare",
-            "@php vendor/bin/testbench workbench:build --ansi"
-        ],
-        "start": [
-            "Composer\\Config::disableProcessTimeout",
-            "@composer run build",
-            "@php vendor/bin/testbench serve"
-        ],
-        "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/pint"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "phpstan/extension-installer": true
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
-            ]
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "generate-ide-helper-model": [
+      "canvas ide-helper:models --dir=\"src/Models\" --write"
+    ],
+    "post-update-cmd": [
+      "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+      "@generate-ide-helper-model"
+    ],
+    "prepare-gh-push": [
+      "@lint",
+      "@analyse",
+      "@test"
+    ],
+    "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+    "prepare": "@php vendor/bin/testbench package:discover --ansi",
+    "build": "@php vendor/bin/testbench workbench:build --ansi",
+    "format": "@php vendor/bin/pint",
+    "analyse": "@php vendor/bin/phpstan analyse --memory-limit=2G",
+    "serve": [
+      "Composer\\Config::disableProcessTimeout",
+      "@build",
+      "@php vendor/bin/testbench serve --ansi"
+    ],
+    "lint": [
+      "@php vendor/bin/pint --ansi"
+    ],
+    "test": [
+      "@php vendor/bin/pest"
+    ]
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "phpstan/extension-installer": true
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "<%= vendorNamespace %>\\<%= className %>\\<%= className %>ServiceProvider"
+      ]
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
