feat: wip: Extension Builder: writing

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "<%= vendorSlug %>/<%= packageSlug %>",
+  "name": "<%= vendorSlug %>/<%= extensionSlug %>",
   "description": "<%= description %>",
   "version": "1.0.0",
   "license": "MIT",
